# ad_snipe

./: .gitignore  pyproject.toml
impl/: main.py
src/ad_snipe/: ad_user.py  alerting.py  new_users.py  remove_users.py
